Fix example font on Firefox

--- a/examples/with-markdown-plugins/public/global.css
+++ b/examples/with-markdown-plugins/public/global.css
@@ -1,5 +1,5 @@
 body {
-  font-family: system-ui;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 .content {
